--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="signInPage.css">
-    <title>Secure Messenger</title>
     <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <title>Secure Messenger</title>
 </head>
 
 <body class="login_background">
 
     <div class="signInContainer">
 
-        <img class="logo" src="./images/logo.png">
-        <div class="clientInputContainer">
+        <img class="logo" src="./images/logo.png" alt="logo">
+        <form class="clientInputContainer" action="">
             <div class="inputContainer">
-                <label class="labelText">Username</label>
-                <input type="text" class="clientInput" placeholder="username" required>
+                <label class="labelText" for="usernameInput">Username</label>
+                <input id="usernameInput" type="text" class="clientInput" placeholder="username" required>
             </div>
 
             <div class="inputContainer">
-                <label class="labelText">Password</label>
-                <input type="password" class="clientInput" placeholder="password" required>
+                <label class="labelText" for="passwordInput">Password</label>
+                <input id="passwordInput" type="password" class="clientInput" placeholder="password" required>
             </div>
-        </div>
+        </form>
         <button type="button" class="signInButton">Sign
             In</button>
 
@@ -34,6 +34,5 @@
 
 </body>
 
-<script src="script.js"></script>
 
 </html>
