--- a/signUp.html
+++ b/signUp.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="signUpPage.css">
+    <link rel="icon" href="./images/logo.png" type="image/x-icon">
     <title>Secure Messenger</title>
 </head>
 
@@ -13,23 +14,23 @@
 
     <div class="signInContainer">
 
-        <img class="logo" src="./images/logo.png">
-        <div class="clientInputContainer">
+        <img class="logo" src="./images/logo.png" alt="logo">
+        <form class="clientInputContainer" action="">
             <div class="inputContainer">
-                <label class="labelText">Email</label>
-                <input type="text" class="clientInput" placeholder="email">
+                <label class="labelText" for="emailInput">Email</label>
+                <input id="emailInput" type="text" class="clientInput" placeholder="email">
             </div>
 
             <div class="inputContainer">
-                <label class="labelText">Username</label>
-                <input type="text" class="clientInput" placeholder="username">
+                <label class="labelText" for="usernameInput">Username</label>
+                <input id="usernameInput" type="text" class="clientInput" placeholder="username">
             </div>
 
             <div class="inputContainer">
-                <label class="labelText">Password</label>
-                <input type="password" class="clientInput" placeholder="password">
+                <label class="labelText" for="passwordInput">Password</label>
+                <input id="passwordInput" type="password" class="clientInput" placeholder="password">
             </div>
-        </div>
+        </form>
         <button class="signInButton">Sign Up</button>
 
         <a class="signUpButton" href="index.html">Sign In</a>
