--- a/dashboard.html
+++ b/dashboard.html
@@ -13,9 +13,33 @@
 
 <body class="login_background">
 
-    <div id="mainContainer">
-        
+<div id="mainContainer">
+    <div class="menuContainer">
+        <div class="profileContainer">
+            <div class="profilePictureContainer">
+                <img class="profilePicture" src="/images/arctic-fox.png">
+            </div>
+
+            <div class="userInfo">
+                <p class="userNameText">User Name</p>
+                <p class="userId userNameText">#ifg57gh</p>
+            </div>
+        </div>
+
+        <div class="addUserContainer">
+            <input id="addUserIcon" type="image" name="Add User Button" src="/images/add-user.png" alt="add user">
+        </div>
+
+        <div class="usersListContainer">
+            <input id="logOutIcon" type="image" name="Log Out Button" src="/images/log-out.png" alt="Log Out"
+                   onclick="logOut()">
+        </div>
     </div>
+
+    <div class="chatContainer">
+
+    </div>
+</div>
 
 </body>
 
