--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 
         <div class="profileContainer">
             <div class="profilePictureContainer">
-                <img class="profilePicture" src="images/arctic-fox.png">
+                <img class="profilePicture" src="images/arctic-fox.png" alt="Profile Picture">
             </div>
 
             <div class="userInfo">
@@ -33,35 +33,36 @@
     
         <div class="contactsContainer">
             <div class="contact">
-                <div class="activeContact"> </div>
-                <div class="contactImageContainer">
-                    <img class="contactImage" src="images/fox (2).png" alt="">
-                </div>
-                <div class="contactsInfo">
-                    <p class="contactName">User Name</p>
-                    <div class="deleteContactContainer">
-                        <input id="deleteContactIcon" type="image" name="Delete Contact Button" src="images/trash.png" alt="delete contact">
+                <div class="activePlusInfo">
+                    <div class="activeContact"> </div>
+                    <div class="contactsInfo">
+                        <div class="contactImageContainer">
+                            <img class="contactImage" src="images/fox (2).png" alt="">
+                        </div>
+                        <div class="contactsInfo">
+                            <p class="contactName">User Name</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="usersListContainer">
-                <input id="logOutIcon" type="image" name="Log Out Button" src="images/log-out.png" alt="Log Out"
-                    onclick="logOut()">
+                <div class="deleteContactContainer">
+                    <input id="deleteContactIcon" type="image" name="Delete Contact Button" src="images/trash.png" alt="delete contact">
+                </div>
             </div>
+        </div>
+        <div class="logOutContainer">
+            <input id="logOutIcon" type="image" name="Log Out Button" src="images/log-out.png" alt="Log Out"
+                   onclick="logOut()">
         </div>
     </div>
     
     <div class="chatContainer">
         <div class="receivedMessage">
-            <div class="contactImageMessage">
-                <img class="contactImageAvatar" src="images/fox (2).png" alt="">
-            </div>
             <div class="textMessageContainer">
-                <p class="textMessageRecieved">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus ratione vero iure in id perspiciatis numquam est. Fugit quas laboriosam similique reiciendis, atque, quam officiis et, id odio cum perspiciatis.</p>
+                <p class="textMessageReceived">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus ratione vero iure in id perspiciatis numquam est. Fugit quas laboriosam similique reiciendis, atque, quam officiis et, id odio cum perspiciatis.</p>
             </div>
-        </div>   
-        <div class="sendMessage">
+        </div>
+        <div class="sentMessage">
             <p class="textMessageSend">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam quod repellat quae deserunt non consequuntur reiciendis enim nam doloremque corrupti? Sapiente vero beatae tenetur laboriosam quibusdam magnam doloribus voluptatem architecto.</p>
         </div>
 
