--- a/Dashboard/Html/dashboard.html
+++ b/Dashboard/Html/dashboard.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/dashboard.css">
-    <link rel="stylesheet" href="../css/signInPage.css">
+    <link rel="stylesheet" href="../Css/dashboard.css">
+    <link rel="stylesheet" href="../../SignIn/Css/signInPage.css">
     <title>Secure Messenger</title>
-    <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 </head>
 
 <body class="login_background">
@@ -18,7 +18,7 @@
 
             <div class="profileContainer">
                 <div class="profilePictureContainer">
-                    <img class="profilePicture" src="../images/arctic-fox.png" alt="Profile Picture">
+                    <img class="profilePicture" src="../../images/arctic-fox.png" alt="Profile Picture">
                 </div>
 
                 <div class="userInfo">
@@ -29,17 +29,18 @@
 
             <div id="addUserContainer" class="addUserContainer">
                 <input id="addUserInput" type=text alt="add user">
-                <input id="addUserButton" type="image" src="/images/add.png">
+                <input id="addUserButton" type="image" src="../../images/add.png">
 
             </div>
 
             <div class="contactsContainer">
+
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -49,16 +50,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -68,16 +68,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -87,16 +86,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -106,16 +104,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -125,16 +122,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -144,16 +140,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -163,16 +158,15 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
-
                 <div class="contact">
                     <div class="activePlusInfo">
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -182,71 +176,16 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
+                               src="../../images/trash.png" alt="delete contact">
                     </div>
                 </div>
 
-                <div class="contact">
-                    <div class="activePlusInfo">
-                        <div class="activeContact"> </div>
-                        <div class="contactsInfo">
-                            <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
-                            </div>
-                            <div class="contactsInfo">
-                                <p class="contactName">User Name</p>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="deleteContactContainer">
-                        <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
-                    </div>
-                </div>
-
-                <div class="contact">
-                    <div class="activePlusInfo">
-                        <div class="activeContact"> </div>
-                        <div class="contactsInfo">
-                            <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
-                            </div>
-                            <div class="contactsInfo">
-                                <p class="contactName">User Name</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="deleteContactContainer">
-                        <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
-                    </div>
-                </div>
-
-                <div class="contact">
-                    <div class="activePlusInfo">
-                        <div class="activeContact"> </div>
-                        <div class="contactsInfo">
-                            <div class="contactImageContainer">
-                                <img class="contactImage" src="/images/fox%20(2).png" alt="">
-                            </div>
-                            <div class="contactsInfo">
-                                <p class="contactName">User Name</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="deleteContactContainer">
-                        <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                            src="/images/trash.png" alt="delete contact">
-                    </div>
-                </div>
             </div>
             <div class="logOutContainer">
-                <a href="index.html">
-                    <input id="logOutIcon" type="image" name="Log Out Button" src="../images/log-out.png" alt="Log Out"
-                        onclick="logOut()">
+                <a href="../../SignIn/Html/signIn.html">
+                    <input id="logOutIcon" type="image" name="Log Out Button" src="../../images/log-out.png" alt="Log Out"
+                           onclick="logOut()">
                 </a>
             </div>
         </div>
@@ -268,7 +207,7 @@
             </div>
             <div class="messageInputContainer">
                 <input type="text" id="messageInput">
-                <input id="sendMessageButton" type="image" src="/images/polygon.png">
+                <input id="sendMessageButton" type="image" src="../../images/polygon.png">
             </div>
         </div>
 
