--- a/SignIn/Html/signIn.html
+++ b/SignIn/Html/signIn.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/signInPage.css">
-    <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../Css/signInPage.css">
+    <link rel="icon" href="../../images/logo.png" type="image/x-icon">
     <title>Secure Messenger</title>
 </head>
 
@@ -14,7 +14,7 @@
 
     <div class="signInContainer">
 
-        <img class="logo" src="../images/logo.png" alt="logo">
+        <img class="logo" src="../../images/logo.png" alt="logo">
         <form class="clientInputContainer" action="">
             <div class="inputContainer">
                 <label class="labelText" for="usernameInput">Username</label>
@@ -26,12 +26,12 @@
                 <input id="passwordInput" type="password" class="clientInput" placeholder="password" required>
             </div>
         </form>
-        <a href="dashboard.html">
+        <a href="../../Dashboard/Html/dashboard.html">
             <button type="button" class="signInButton">Sign
                 In</button>
         </a>
 
-        <a class="signUpButton" href="signUp.html">Sign Up</a>
+        <a class="signUpButton" href="../../SingUp/Html/signUp.html">Sign Up</a>
     </div>
 
 </body>
