--- a/SingUp/Html/signUp.html
+++ b/SingUp/Html/signUp.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/signUpPage.css">
-    <link rel="icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../Css/signUpPage.css">
+    <link rel="icon" href="../../images/logo.png" type="image/x-icon">
     <title>Secure Messenger</title>
 </head>
 
@@ -14,7 +14,7 @@
 
     <div class="signInContainer">
 
-        <img class="logo" src="../images/logo.png" alt="logo">
+        <img class="logo" src="../../images/logo.png" alt="logo">
         <form class="clientInputContainer" action="">
             <div class="inputContainer">
                 <label class="labelText" for="emailInput">Email</label>
@@ -33,7 +33,7 @@
         </form>
         <button class="signInButton">Sign Up</button>
 
-        <a class="signUpButton" href="index.html">Sign In</a>
+        <a class="signUpButton" href="../../SignIn/Html/signIn.html">Sign In</a>
     </div>
 
 </body>
