--- a/Dashboard/Html/dashboard.html
+++ b/Dashboard/Html/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../Css/dashboard.css">
     <link rel="stylesheet" href="../../SignIn/Css/signInPage.css">
     <title>Secure Messenger</title>
-    <link rel="icon" href="../../images/logo.png" type="image/x-icon">
+    <link rel="icon" href="../../Common/images/logo.png" type="image/x-icon">
 </head>
 
 <body class="login_background">
@@ -18,7 +18,7 @@
 
             <div class="profileContainer">
                 <div class="profilePictureContainer">
-                    <img class="profilePicture" src="../../images/arctic-fox.png" alt="Profile Picture">
+                    <img class="profilePicture" src="../../Common/images/arctic-fox.png" alt="Profile Picture">
                 </div>
 
                 <div class="userInfo">
@@ -29,7 +29,7 @@
 
             <div id="addUserContainer" class="addUserContainer">
                 <input id="addUserInput" type=text alt="add user">
-                <input id="addUserButton" type="image" src="../../images/add.png">
+                <input id="addUserButton" type="image" src="../../Common/images/add.png">
 
             </div>
 
@@ -40,7 +40,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -50,7 +50,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -58,7 +58,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -68,7 +68,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -76,7 +76,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -86,7 +86,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -94,7 +94,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -104,7 +104,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -112,7 +112,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -122,7 +122,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -130,7 +130,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -140,7 +140,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -148,7 +148,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -158,7 +158,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
                 <div class="contact">
@@ -166,7 +166,7 @@
                         <div class="activeContact"> </div>
                         <div class="contactsInfo">
                             <div class="contactImageContainer">
-                                <img class="contactImage" src="../../images/fox%20(2).png" alt="">
+                                <img class="contactImage" src="../../Common/images/fox%20(2).png" alt="">
                             </div>
                             <div class="contactsInfo">
                                 <p class="contactName">User Name</p>
@@ -176,7 +176,7 @@
 
                     <div class="deleteContactContainer">
                         <input class="deleteContactIcon" type="image" name="Delete Contact Button"
-                               src="../../images/trash.png" alt="delete contact">
+                               src="../../Common/images/trash.png" alt="delete contact">
                     </div>
                 </div>
 
@@ -184,7 +184,7 @@
             </div>
             <div class="logOutContainer">
                 <a href="../../SignIn/Html/signIn.html">
-                    <input id="logOutIcon" type="image" name="Log Out Button" src="../../images/log-out.png" alt="Log Out"
+                    <input id="logOutIcon" type="image" name="Log Out Button" src="../../Common/images/log-out.png" alt="Log Out"
                            onclick="logOut()">
                 </a>
             </div>
@@ -207,7 +207,7 @@
             </div>
             <div class="messageInputContainer">
                 <input type="text" id="messageInput">
-                <input id="sendMessageButton" type="image" src="../../images/polygon.png">
+                <input id="sendMessageButton" type="image" src="../../Common/images/polygon.png">
             </div>
         </div>
 
