--- a/SingUp/Html/signUp.html
+++ b/SingUp/Html/signUp.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/signUpPage.css">
-    <link rel="icon" href="../../images/logo.png" type="image/x-icon">
+    <link rel="icon" href="../../Common/images/logo.png" type="image/x-icon">
     <title>Secure Messenger</title>
 </head>
 
@@ -14,7 +14,7 @@
 
     <div class="signInContainer">
 
-        <img class="logo" src="../../images/logo.png" alt="logo">
+        <img class="logo" src="../../Common/images/logo.png" alt="logo">
         <form class="clientInputContainer" action="">
             <div class="inputContainer">
                 <label class="labelText" for="emailInput">Email</label>
