--- a/SignIn/Html/signIn.html
+++ b/SignIn/Html/signIn.html
@@ -2,12 +2,17 @@
 <html lang="en">
 
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../Js/SignIn.js"></script>
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/signInPage.css">
     <link rel="icon" href="../../Common/images/logo.png" type="image/x-icon">
     <title>Secure Messenger</title>
+
 </head>
 
 <body class="login_background">
