--- a/SignIn/Html/signIn.html
+++ b/SignIn/Html/signIn.html
@@ -32,8 +32,7 @@
             </div>
         </form>
         <a href="../../Dashboard/Html/dashboard.html">
-            <button type="button" class="signInButton">Sign
-                In</button>
+            <button type="button" class="signInButton" onclick="Validate()">Sig In</button>
         </a>
 
         <a class="signUpButton" href="../../SingUp/Html/signUp.html">Sign Up</a>
