--- a/SignIn/Html/signIn.html
+++ b/SignIn/Html/signIn.html
@@ -31,7 +31,8 @@
                 <input id="passwordInput" type="password" class="clientInput" placeholder="password" required>
             </div>
         </form>
-        <a href="../../Dashboard/Html/dashboard.html">
+        <!--href="../../Dashboard/Html/dashboard.html"-->
+        <a>
             <button type="button" class="signInButton" onclick="Validate()">Sig In</button>
         </a>
 
