start pass valid
eee

--- a/SingUp/Html/signUp.html
+++ b/SingUp/Html/signUp.html
@@ -36,6 +36,11 @@
                 <input id="passwordInput" type="password" class="clientInput" placeholder="password">
                 <label id="passwordResult"></label>
             </div>
+            <div class="inputContainer">
+                <label class="labelText" for="passwordInputConfirm">Confirm Password</label>
+                <input id="passwordInputConfirm" type="password" class="clientInput" placeholder="confirm password">
+                <label id="passwordConfirmResult"></label>
+            </div>
         </form>
         <button class="signInButton" onclick="Validate()">Sign Up</button>
 
